--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
         </div>
         <div class="right-panel">
             <div class="video-container" id="videoContainer">
-                <video id="trafficVideo" width="640" height="480">
+                <video id="trafficVideo" width="640" height="480" loop>
                     <source src="" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
